// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordsTableContainer RecordsTableContainer render results renders properly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RecordsTableContainer
    isError={false}
    results={
        Array [
            Object {
              "_id": "1",
              "email": "alex@gmail.com",
              "score": 25,
              "username": "alex",
            },
            Object {
              "_id": "2",
              "email": "den@gmail.com",
              "score": 35,
              "username": "den",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <thead>
          <tr>
                    <th>
                              User Name
                    </th>
                    <th>
                              Email
                    </th>
                    <th>
                              Score
                    </th>
          </tr>
</thead>,
        <tbody>
          <RecordsTableRow
                    email="alex@gmail.com"
                    score={25}
                    username="alex"
          />
          <RecordsTableRow
                    email="den@gmail.com"
                    score={35}
                    username="den"
          />
</tbody>,
      ],
      "className": "table-records",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <tr>
            <th>
                        User Name
            </th>
            <th>
                        Email
            </th>
            <th>
                        Score
            </th>
</tr>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <th>
                User Name
</th>,
              <th>
                Email
</th>,
              <th>
                Score
</th>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "User Name",
              },
              "ref": null,
              "rendered": "User Name",
              "type": "th",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Email",
              },
              "ref": null,
              "rendered": "Email",
              "type": "th",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Score",
              },
              "ref": null,
              "rendered": "Score",
              "type": "th",
            },
          ],
          "type": "tr",
        },
        "type": "thead",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <RecordsTableRow
              email="alex@gmail.com"
              score={25}
              username="alex"
/>,
            <RecordsTableRow
              email="den@gmail.com"
              score={35}
              username="den"
/>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "function",
            "props": Object {
              "email": "alex@gmail.com",
              "score": 25,
              "username": "alex",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "function",
            "props": Object {
              "email": "den@gmail.com",
              "score": 35,
              "username": "den",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "tbody",
      },
    ],
    "type": "table",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <thead>
            <tr>
                        <th>
                                    User Name
                        </th>
                        <th>
                                    Email
                        </th>
                        <th>
                                    Score
                        </th>
            </tr>
</thead>,
          <tbody>
            <RecordsTableRow
                        email="alex@gmail.com"
                        score={25}
                        username="alex"
            />
            <RecordsTableRow
                        email="den@gmail.com"
                        score={35}
                        username="den"
            />
</tbody>,
        ],
        "className": "table-records",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <tr>
              <th>
                            User Name
              </th>
              <th>
                            Email
              </th>
              <th>
                            Score
              </th>
</tr>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <th>
                  User Name
</th>,
                <th>
                  Email
</th>,
                <th>
                  Score
</th>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "User Name",
                },
                "ref": null,
                "rendered": "User Name",
                "type": "th",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Email",
                },
                "ref": null,
                "rendered": "Email",
                "type": "th",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Score",
                },
                "ref": null,
                "rendered": "Score",
                "type": "th",
              },
            ],
            "type": "tr",
          },
          "type": "thead",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <RecordsTableRow
                email="alex@gmail.com"
                score={25}
                username="alex"
/>,
              <RecordsTableRow
                email="den@gmail.com"
                score={35}
                username="den"
/>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "function",
              "props": Object {
                "email": "alex@gmail.com",
                "score": 25,
                "username": "alex",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "function",
              "props": Object {
                "email": "den@gmail.com",
                "score": 35,
                "username": "den",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "tbody",
        },
      ],
      "type": "table",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`RecordsTableContainer RecordsTableContainer render without results renders properly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RecordsTableContainer
    isError={true}
    results={null}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <thead>
          <tr>
                    <th>
                              User Name
                    </th>
                    <th>
                              Email
                    </th>
                    <th>
                              Score
                    </th>
          </tr>
</thead>,
        <tbody>
          <tr>
                    <td
                              colSpan="3"
                    >
                              Error while loading highscores, the server doesn't work...
                    </td>
          </tr>
</tbody>,
      ],
      "className": "table-records",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <tr>
            <th>
                        User Name
            </th>
            <th>
                        Email
            </th>
            <th>
                        Score
            </th>
</tr>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <th>
                User Name
</th>,
              <th>
                Email
</th>,
              <th>
                Score
</th>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "User Name",
              },
              "ref": null,
              "rendered": "User Name",
              "type": "th",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Email",
              },
              "ref": null,
              "rendered": "Email",
              "type": "th",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Score",
              },
              "ref": null,
              "rendered": "Score",
              "type": "th",
            },
          ],
          "type": "tr",
        },
        "type": "thead",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <tr>
            <td
                        colSpan="3"
            >
                        Error while loading highscores, the server doesn't work...
            </td>
</tr>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <td
              colSpan="3"
>
              Error while loading highscores, the server doesn't work...
</td>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Error while loading highscores, the server doesn't work...",
              "colSpan": "3",
            },
            "ref": null,
            "rendered": "Error while loading highscores, the server doesn't work...",
            "type": "td",
          },
          "type": "tr",
        },
        "type": "tbody",
      },
    ],
    "type": "table",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <thead>
            <tr>
                        <th>
                                    User Name
                        </th>
                        <th>
                                    Email
                        </th>
                        <th>
                                    Score
                        </th>
            </tr>
</thead>,
          <tbody>
            <tr>
                        <td
                                    colSpan="3"
                        >
                                    Error while loading highscores, the server doesn't work...
                        </td>
            </tr>
</tbody>,
        ],
        "className": "table-records",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <tr>
              <th>
                            User Name
              </th>
              <th>
                            Email
              </th>
              <th>
                            Score
              </th>
</tr>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <th>
                  User Name
</th>,
                <th>
                  Email
</th>,
                <th>
                  Score
</th>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "User Name",
                },
                "ref": null,
                "rendered": "User Name",
                "type": "th",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Email",
                },
                "ref": null,
                "rendered": "Email",
                "type": "th",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Score",
                },
                "ref": null,
                "rendered": "Score",
                "type": "th",
              },
            ],
            "type": "tr",
          },
          "type": "thead",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <tr>
              <td
                            colSpan="3"
              >
                            Error while loading highscores, the server doesn't work...
              </td>
</tr>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <td
                colSpan="3"
>
                Error while loading highscores, the server doesn't work...
</td>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Error while loading highscores, the server doesn't work...",
                "colSpan": "3",
              },
              "ref": null,
              "rendered": "Error while loading highscores, the server doesn't work...",
              "type": "td",
            },
            "type": "tr",
          },
          "type": "tbody",
        },
      ],
      "type": "table",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
